--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>MediaPipe + Goku Optimizado</title>
+<title>MediaPipe + Goku + Giroscopio</title>
 <style>
-  html, body { margin:0; padding:0; height:100%; background:black; color:white; font-family:sans-serif; overflow:hidden; }
+  html, body { margin:0; padding:0; height:100%; background:black; overflow:hidden; }
   #video, #overlayCanvas { position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; }
   #overlayCanvas { pointer-events:none; }
-  #status { position:absolute; bottom:10px; left:10px; background:rgba(0,0,0,0.5); padding:5px 10px; border-radius:5px; z-index:10; }
+  #status { position:absolute; bottom:10px; left:10px; background:rgba(0,0,0,0.5); padding:5px 10px; border-radius:5px; color:white; }
 </style>
 </head>
 <body>
@@ -17,6 +17,7 @@
 <div id="status">Cargando...</div>
 
 <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
 
 <script>
 (async () => {
@@ -26,7 +27,16 @@
   const statusEl = document.getElementById('status');
 
   const gokuImg = new Image();
-  gokuImg.src = 'https://cdn.pixabay.com/photo/2024/08/12/goku-ai-generated.png'; // Imagen libre de derechos
+  gokuImg.src = 'https://cdn.pixabay.com/photo/2024/08/12/goku-ai-generated.png'; // ejemplo libre
+
+  // Variables para rotar Goku
+  let gokuRotation = 0;
+  window.addEventListener('deviceorientation', (event) => {
+    // gamma es inclinación izquierda-derecha
+    if (event.gamma !== null) {
+      gokuRotation = event.gamma * (Math.PI / 180);
+    }
+  });
 
   // Cámara optimizada
   try {
@@ -47,14 +57,14 @@
   video.onloadedmetadata = resizeCanvas;
   window.onresize = resizeCanvas;
 
-  // MediaPipe Hands optimizado
+  // MediaPipe Hands
   const hands = new Hands({locateFile: f => `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${f}`});
   hands.setOptions({
     selfieMode: false,
     maxNumHands: 1,
-    modelComplexity: 0, // más rápido
-    minDetectionConfidence: 0.6,
-    minTrackingConfidence: 0.6
+    modelComplexity: 0,
+    minDetectionConfidence: 0.3,
+    minTrackingConfidence: 0.3
   });
 
   let handLandmarks = null;
@@ -66,7 +76,7 @@
   // Procesar menos frames (~15fps)
   let lastProcess = 0;
   async function processFrame(timestamp){
-    if (timestamp - lastProcess > 66) { // cada ~66ms
+    if (timestamp - lastProcess > 66) {
       await hands.send({image: video});
       lastProcess = timestamp;
     }
@@ -77,17 +87,22 @@
   // Dibujar
   function draw(){
     ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+    // Dibujar landmarks si hay mano
     if (handLandmarks) {
-      const ix = handLandmarks[0].x * canvas.width;
-      const iy = handLandmarks[0].y * canvas.height;
-
-      ctx.beginPath();
-      ctx.arc(ix, iy, 15, 0, 2*Math.PI);
-      ctx.fillStyle = 'rgba(0,255,0,0.7)';
-      ctx.fill();
-
-      ctx.drawImage(gokuImg, canvas.width/2 - 50, canvas.height/2 - 150, 100, 150);
+      drawConnectors(ctx, handLandmarks, HAND_CONNECTIONS, {color: '#00FF00', lineWidth: 2});
+      drawLandmarks(ctx, handLandmarks, {color: '#FF0000', lineWidth: 1});
     }
+
+    // Dibujar Goku centrado y rotado según el teléfono
+    if (gokuImg.complete) {
+      ctx.save();
+      ctx.translate(canvas.width/2, canvas.height/2);
+      ctx.rotate(gokuRotation);
+      ctx.drawImage(gokuImg, -50, -75, 100, 150);
+      ctx.restore();
+    }
+
     requestAnimationFrame(draw);
   }
   draw();
